feat: add word management logic with security and high test coverage